istio-teaching/envoyfilters/applyto/cache/cache-deploy.yaml
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: cache
  labels:
    app: cache
spec:
  selector:
    matchLabels:
      app: cache
  replicas: 1
  template:
    metadata:
      labels:
        app: cache
        version: v1
    spec:
      containers:
        - name: cache
          image: registry.cn-hangzhou.aliyuncs.com/hxpdocker/cache:latest
          imagePullPolicy: Always
          ports:
            - containerPort: 8083
---
apiVersion: v1
kind: Service
metadata:
  name: cache
spec:
  selector:
    app: cache
  ports:
    - name: tcp-cache
      protocol: TCP
      port: 8083
      targetPort: 8083
---
