istio-teaching/envoyfilters/applyto/cache/vs-cache.yaml
apiVersion: networking.istio.io/v1beta1
kind: VirtualService
metadata:
  name: cache
spec:
  hosts:
  - "*"
  gateways:
  - bookinfo-gateway
  http:
  - match:
    - uri:
        prefix: /service
    route:
    - destination:
        host: cache.istio.svc.cluster.local
        port:
          number: 8083
